--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </svg>
                 </div>
                 <div>
-                    <h1 class="text-2xl font-bold">เมทินีคลินิกการพยาบาล</h1>
+                    <h1 class="text-2xl font-bold">เมทินีคลินิกการพยาบาล เลขที่ใบอนุญาต</h1>
                     <p class="text-emerald-50 text-sm">Dashboard บริหารจัดการข้อมูลผู้รับบริการ</p>
                 </div>
             </div>
