--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </svg>
                 </div>
                 <div>
-                    <h1 class="text-2xl md:text-3xl font-bold tracking-tight">เมทินีคลินิกการพยาบาล เลขที่ใบอนุญาตที่ xxxxx</h1>
+                    <h1 class="text-2xl md:text-3xl font-bold tracking-tight">เมทินีคลินิกการพยาบาล</h1>
                     <p class="text-emerald-100 text-sm flex items-center gap-2">
                         <span class="w-2 h-2 bg-emerald-300 rounded-full animate-pulse"></span>
                         ระบบบริหารจัดการข้อมูลและคลังยาอัจฉริยะ
